macro_utilities/stringify_attr/src/tests/derive/invalid_path.stderr
error: Expected a list
  --> $DIR/invalid_path.rs:20:21
   |
20 |         #[stringify(path = "a")]
   |                     ^^^^^^^^^^
